# MiniGL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.cache/clangd/index/: MiniGL.cpp.1266068E7B6E5B46.idx  MiniGL.hpp.BC212A29E57D45C1.idx  _fixes.hpp.9CA2099420CB6A43.idx  _vectorize.hpp.2CAF1AA81D78713B.idx  common.hpp.5645D894FD297288.idx  compute_common.hpp.F61227F253BBE2CB.idx  compute_vector_relational.hpp.44DD1BFBABAED3CD.idx  constants.hpp.72FBC3F767CF5C1A.idx  constants.inl.FEF9AEDF6A410373.idx  epsilon.hpp.7D33001D0446DB80.idx  epsilon.inl.178EADF5B2313E24.idx  exponential.hpp.B37445C67E2FA4ED.idx  func_common.inl.A06AF281C5AB83DA.idx  func_exponential.inl.EB06BCAC8958D31B.idx  func_geometric.inl.8A4FA7F359FF56F0.idx  func_integer.inl.BF61164D841CE8CD.idx  func_matrix.inl.CF0563D57AC14C96.idx  func_packing.inl.0D716B02B3A97902.idx  func_trigonometric.inl.7490B07B399F9121.idx  func_vector_relational.inl.9EE6B1BCFE11BC9C.idx  fwd.hpp.E99C65DA07F6EADC.idx  geometric.hpp.BC96588296345091.idx  glad.c.58D4FFF7E2CE03B3.idx  (+166 more)
include/: MiniGL.h  MiniGL.hpp  RenderGlobals.h  RenderGlobals.hpp  camera.h  drawing.h  drawing.hpp  drawing_legacy.h  drawing_modern.h  drawing_render.h  drawing_style.h  input.h  input.hpp  lighting.h  shader.h  shader.hpp  utilities.h  window.h  window.hpp
src/: MiniGL.c  MiniGL.cpp  RenderGlobals.c  RenderGlobals.cpp  camera.c  drawing.c  drawing.cpp  drawing_legacy.c  drawing_modern.c  drawing_render.c  drawing_style.c  glad.c  input.c  input.cpp  lighting.c  main.c  main.cpp  shader.c  shader.cpp  utilities.c  window.c  window.cpp
